--- a/性能之巅/5.应用程序.md
+++ b/性能之巅/5.应用程序.md
@@ -1,2 +1,44 @@
 # 5.应用程序
 
+## 5.1 应用程序基础
+
+
+
+
+
+## 5.2 应用程序性能技术
+
+
+
+
+
+## 5.3 编程语言
+
+
+
+### 编译语言
+
+gcc优化
+
+
+
+### 解释语言
+
+Shell 脚本
+
+
+
+### 虚拟机
+
+java、Erlang
+
+虚拟机指令集（字节码，bytecode）
+
+
+
+### 垃圾回收
+
+
+
+## 5.4 方法和分析
+
