--- a/性能之巅/5.应用程序.md
+++ b/性能之巅/5.应用程序.md
@@ -42,3 +42,32 @@ java、Erlang
 
 ## 5.4 方法和分析
 
+
+
+
+
+### 线程状态分析
+
+
+
+两种装：
+
+- on-cpu
+- Off-cpu
+
+六中状态：
+
+- 执行
+- 可运行
+- 匿名换页
+- 睡眠
+- 锁
+- 空闲
+
+> prstat
+
+
+
+### CPU刨析
+
+### 系统调用分析
