--- a/网络基础/网络基础.md
+++ b/网络基础/网络基础.md
@@ -16,13 +16,28 @@
 
 ## 五层模型
 
+1. 物理层
+
+2. 数据链路层
+
+3. 网络层
+
+4. 传输层
+
+5. 应用层（应用层、表现层、会话层）
+
 
 
 ## 四层模型
 
+1. 数据链路层（物理+数据链路）
+2. 网络层
+3. 传输层
+4. 应用层（应用层、表现层、会话层）
+
+## 三次握手
 
 
-# 三次握手
 
 client                  												server
 
@@ -34,9 +49,7 @@ ESTABLISHED              <------------SYNC seq=y,ACK=x+1---------/
 
 ​                                      \\--------------ACK =y+1---------------------ESTABLISHED
 
-
-
-# 四次挥手
+## 四次挥手
 
 > 经过n次通讯后，进行挥手断开
 
