--- a/高并发负载均衡/2.LVS的DR、TUN、NAT模型推导.md
+++ b/高并发负载均衡/2.LVS的DR、TUN、NAT模型推导.md
@@ -27,3 +27,35 @@ gateway:192.168.1.0 ip:192.168.1.4
 四层负载均衡器：只负责数据转发，直接发往下一跳
 
 应用服务器，是在七层工作，需要握手，数据解析等
+
+## NAT模式
+
+变更源IP地址，数据需要一跳一跳的返回
+
+分为：
+
+- D-NAT 修改目标地址
+- S-NAT 修改源地址
+
+### D-NAT
+
+非对称的
+
+上行和下行的网速不同
+
+
+
+## DR模式
+
+直接替换mac地址
+
+
+
+基于二层实现（数据链路层）
+
+mac地址欺骗：速度成本高，成本低
+
+
+
+局限在一个局域网内
+
