--- a/高并发负载均衡/2.LVS的DR、TUN、NAT模型推导.md
+++ b/高并发负载均衡/2.LVS的DR、TUN、NAT模型推导.md
@@ -43,6 +43,12 @@ gateway:192.168.1.0 ip:192.168.1.4
 
 上行和下行的网速不同
 
+**要求**：Real SERVER(网关) 必须指向负载均衡器
+
+### S-NAT
+
+
+
 
 
 ## DR模式
@@ -58,4 +64,31 @@ mac地址欺骗：速度成本高，成本低
 
 
 局限在一个局域网内
+
+
+
+**对外隐藏VIP，对内可见VIP：**
+
+修改kernel
+
+
+
+**调度算法**：
+
+
+
+## TUN隧道技术模式
+
+> 在整个数据包，进行数据包裹；
+
+1. VPN
+2. 
+
+
+
+# LVS
+
+>  Linux Virtual Server   , 章文嵩 ，1998年写出
+
+
 
