--- a/高并发负载均衡/2.LVS的DR、TUN、NAT模型推导.md
+++ b/高并发负载均衡/2.LVS的DR、TUN、NAT模型推导.md
@@ -71,11 +71,40 @@ mac地址欺骗：速度成本高，成本低
 
 修改kernel
 
+只能通过echo重定向修改
+
+> 不能使用vi修改
+
+```
+arp_ignore:定义接受到arp请求时相应界别；
+- 0：只要本地配置有相应地址，给予响应；
+- 1：仅在请求的目标（MAC）地址配置请求到达地接口上的时候，才给予响应
+
+arp_announce：定义将自己地址向外通告时的通告级别；
+- 0：将本地任何接口上的任何地址向外通告；
+- 1：试图仅向目标网络通告与其网络匹配的地址；
+- 2：仅向与本地接口上地址匹配的网络进行通告；
+```
+
 
 
 **调度算法**：
 
+自重静态：
 
+rr :轮训
+
+wrr
+
+dh
+
+sh
+
+动态调度算法：
+
+lc最少连接：动态负载服务器监听，通信数据库报的握手数据，记录建立连接的状态
+
+wlc 加权最少连接：
 
 ## TUN隧道技术模式
 
@@ -90,5 +119,90 @@ mac地址欺骗：速度成本高，成本低
 
 >  Linux Virtual Server   , 章文嵩 ，1998年写出
 
+linux默认都带着lvs，模块名字叫ipvs
 
+和lvs交互程序 ipvsadm
+
+
+
+# 实验手册
+
+## 虚拟化能力
+
+虚拟网络
+
+虚拟主机
+
+## LVS配置过程
+
+node01: 192.168.150.11
+
+node02:192.168.150.12
+
+node03:192.168.150.13
+
+### 调整网络
+
+修改网络
+
+
+
+1. 修改内核
+
+   echo 1 > /proc/sys/net/ipv4/conf/eth0/arp_ignore
+
+   echo 1 > /proc/sys/net/ipv4/conf/all/arp_ignore
+
+   echo 2 > /proc/sys/net/ipv4/conf/eth0/arp_announce
+
+   echo 2 > /proc/sys/net/ipv4/conf/all/arp_announce
+
+2. 设置隐藏vip
+
+   ifconfig lo 192.168.150.100 netmask 255.255.255
+
+配置node2~3的http服务器
+
+
+
+在node01 上安装ipvsadm
+
+```shell
+ipvsadm -A -t 192.168.150.100:80 -s rr #入口配置
+ipvsadm -a -t 192.168.150.100:80 -r 192.168.150.12 -g -w 1 # 出流量配置
+ipvsadm -a -t 192.168.150.100:80 -r 192.168.150.12 -g -w 1 # 出流量配置
+```
+
+查看配置
+
+`ipvsadm -ln`
+
+验证
+
+​	浏览器访问 192.168.150.100 看到负载
+
+ 	在node01上查看链接监听数目`netstat -natp`，然后分别在node02~3上分别看下
+
+​	在node01上继续查看，`ipvsadm -lnc` 查看lvs自己记录的小本本链接；FIN_WAIT 是连接过；SYNC_RECV，基本确定，lvs没问题，一定是后边网络出问题了
+
+
+
+
+
+# 附录
+
+## lvs数据流转过程
+
+1. 正常http请求  192.168.150.100:80
+
+2. 数据包中[192.168.150.10:12121->192.168.150.100:80]
+3. 到达服务网关 192.168.150.2，路由到lvs服务器{192.168.150.11，192.168.150.100:80}
+4. 数据包[192.168.150.10:12121->192.168.150.100:80] 符合lvs规则，加工数据包([192.168.150.10:12121->192.168.150.100:80],@node02@mac)
+5. lvs数据，返回给服务网关
+6. 网关在二层根据mac地址直接发送到192.168.150.12
+7. node02 192.168.150.12 解码数据包([192.168.150.10:12121->192.168.150.100:80],@node02@mac) 为[192.168.150.10:12121->192.168.150.100:80]，进行响应
+
+## 工作网络层
+
+lvs工作在四层（传输控制层），对符合规则的数据进行加工后，数据会被在二层进行路由发送到目标服务器
 
