--- a/mysql/1.mysql调优 ——使用profiles，performance_schema 性能监控.md
+++ b/mysql/1.mysql调优 ——使用profiles，performance_schema 性能监控.md
@@ -81,3 +81,128 @@ show profile cpu;
    5. 使用枚举类型代替字符串
    6. 特殊数据类型，如IP
 
+### 合理使用范式和反范式
+
+#### 三范式：
+
+​	最终目标是为了：减少数据冗余
+
+​	1.
+
+范式：
+
+​	优点：范式化的更新通常比反范式要快；数据范式化后，很少或者没有重复的数据；范式化的数据比较小，可以放在内存中，操作比较快
+
+​	缺点：需要进行关联操作
+
+反范式：
+
+​	优点：
+
+​	缺点：冗余，造成数据丢失
+
+注意：
+
+​	通常结合使用
+
+
+
+#### 主键选择
+
+代理主键
+
+​	于叶武无关，无意义的数字序列
+
+自然主键
+
+​	事务中的自然唯一标识
+
+推荐使用代理主键
+
+​	不与业务耦合，因此更容易维护
+
+​	一个大多数表。。
+
+#### 字符集的选择
+
+#### 存储引擎的选择
+
+> 代表数据的组织形式
+
+innodb
+
+myisam
+
+memory 不能序列化
+
+
+
+#### 适当的数据冗余
+
+频繁引用的列表且只能通过join2张彪的按时才能得到独立小字段
+
+冗余要确保，冗余字段更新
+
+
+
+#### 适当拆分
+
+分表：
+
+​	垂直拆分
+
+​	水皮拆分
+
+
+
+## 执行计划
+
+explain select * from user;
+
+id
+
+​	the select identifier
+
+​	select 查询的序列号，包含一组数字，表示查询select子句或者操作表的顺序
+
+​	id值一样，从上往下执行
+
+​	id越小，优先级越高，越先执行
+
+​	id相同或不同，相同的是一组
+
+select_type
+
+​	simple
+
+​	primary
+
+​	union
+
+​	dependent union
+
+​	dependent subquery
+
+type
+
+​	>  访问方式
+
+​	system>const>eq_ref> ref>fulltext > ref_or_null>index_merge>unique_subquery>index_subquery>range>index
+
+​	index 表示全所言in扫描
+
+​	
+
+possible_keys
+
+
+
+key_len
+
+
+
+rows
+
+
+
+extra
