--- a/mysql/# 3.Mysql 调优——索引的基本实现原理和优化.md
+++ b/mysql/# 3.Mysql 调优——索引的基本实现原理和优化.md
@@ -1,2 +1,153 @@
 # 3.Mysql 调优——索引的基本实现原理和优化
 
+在sql用到的了索引列，才可能用到索引
+
+
+
+possible_keys
+
+
+
+## 索引的优点
+
+
+
+1. 大大减少服务器需要扫描的数量
+2. 帮助服务器避免排序和临时表
+3. 将随机io变成顺序io
+
+
+
+## 索引的用处
+
+1. 快速查找匹配where子句的行
+2. congconsideration 中消除行
+
+
+
+## 分类
+
+
+
+## 技术名词
+
+
+
+## 索引数据结构
+
+
+
+## 索引匹配方式
+
+
+
+1. 全值匹配
+
+​	和所有列中的所有值进行匹配
+
+2. 匹配最左前缀
+
+​	只匹配前面几个列
+
+3. 匹配列前缀
+
+​	
+
+4. 匹配某一个范围值
+
+
+
+5. 精确匹配到某一列和范围匹配另一列
+
+
+
+6. 只访问索引查询
+
+​	> 索引覆盖
+
+
+
+## 哈希索引
+
+> 哈希冲突：怎么避免哈希冲突
+>
+> 扰动函数
+
+
+
+## 组合索引
+
+
+
+顺序问题
+
+空间问题
+
+
+
+## 聚簇索引和非聚簇索引
+
+
+
+
+
+聚簇索引
+
+优点，缺点
+
+
+
+非聚餐索引
+
+
+
+
+
+## 覆盖索引
+
+基本介绍
+
+
+
+
+
+## 优化小细节
+
+表达式
+
+
+
+尽量使用索引
+
+
+
+
+
+前缀索引
+
+> 索引的选择性：索引的选择和索引的准确性匹配的比值
+
+​	只取前面的部分字符串，作为索引
+
+`alert table t add key(city(7))`
+
+​	基数(cardinality)：某一个列的唯一值的总数
+
+> hyperloglog
+
+使用索引扫描来进行排序
+
+​		按照索引顺序读取数据
+
+​		order by 的顺序要和顺序的排序方式一样（索引的排序方式，默认是升序）
+
+
+
+
+
+​	
+
+
+
+
+
