--- a/jvm/jvm入门到精通/3.JVM 内存模型.md
+++ b/jvm/jvm入门到精通/3.JVM 内存模型.md
@@ -84,3 +84,71 @@ classloader 使用的是一个模板方法
 >
 > ![](E:\ldm-git\book_reading\jvm\jvm入门到精通\dcl.png)
 
+## JMM Java Memory Model
+
+计算机的存储结构
+
+![](E:\ldm-git\book_reading\jvm\jvm入门到精通\存储结构.png)
+
+![](E:\ldm-git\book_reading\jvm\jvm入门到精通\CPU周期对比.png)
+
+### 多线程硬件支持
+
+总线锁
+
+
+
+### 缓存一致性协议
+
+现代CPU的数据一致性实现=缓存锁+总线锁
+
+
+
+### 缓存行
+
+在读取数据的时候，会进行块读，这个块叫缓存行 cacheline ，大小为64byte
+
+**伪共享：**位于同一缓存行的不同的数，被两个不同的CPU锁定，会互相影响
+
+使用缓存行的对齐方式，解决伪共享的问题
+
+>  disruptor 实践了缓存行填充
+
+### CPU的乱序执行
+
+CPU为了提高执行效率，会在一条执行执行过程中（比如去内存读取数据，速度会慢100倍），去同时执行另一条指令，前提是，两条指令没有依赖关系
+
+
+
+WCBuffer 写操作也可以合并，只有4个位置，位置写满后，会放入L缓存
+
+合并写示例 
+
+乱序执行示例（呈现难度比较高）
+
+
+
+### 有序性保障
+
+#### 系统层面
+
+CPU内存屏障
+
+sfence:存屏障；在sfence之前的写指令，必须在sfence之后的写操作前完成
+
+lfence：读屏障
+
+mfence：两个加起来
+
+
+
+intel lock 汇编指令
+
+
+
+#### JVM级别
+
+
+
+
+
