--- a/jvm/jvm入门到精通/4.Java运行时数据区和常用指令.md
+++ b/jvm/jvm入门到精通/4.Java运行时数据区和常用指令.md
@@ -49,11 +49,15 @@ System.out.println(i);
 
 ​	FGC 不会清理
 
+​	大小启动的时候指定，不能变
+
 2.Meta Space(>1.8)
 
 ​	字符串常量位于堆
 
 ​	会触发FGC清理
+
+​	不设定的话，最大就是物理内存
 
 **Direct Memory**
 
@@ -88,3 +92,35 @@ System.out.println(i);
 > 基于栈的指令集
 >
 > 基于寄存器的指令集
+
+
+
+每个方法对应一个栈贞
+
+
+
+## 常用指令
+
+store
+
+load
+
+invoke
+
+1. invokestatic
+
+2. invokevirtual
+
+3. invokeinterface
+
+4. invokespecial
+
+   可以直接定位，不需要多态的方法
+
+   private 和构造函数
+
+5. InvokeDynamic
+
+    JVM最难的指令
+
+   lambda表达式或者反射或者其他动态语言scala kotlin 或者cglib asm 动态产生class ,会用到的指令
