--- a/亿级流量缓存架构/5 . 亿级流量 多级缓存 实践.md
+++ b/亿级流量缓存架构/5 . 亿级流量 多级缓存 实践.md
@@ -55,3 +55,36 @@ cjson 模块
 
 
 pipeline
+
+
+
+## lua-resty-http 入门
+
+
+
+### lua-resty-http 实现一致性哈希负载均衡
+
+
+
+### 模板实时渲染 lua-resty-template
+
+
+
+基于内存形式渲染
+
+
+
+模板移植到内存
+
+
+
+多份备份，内存浪费
+
+使用中心缓存，增加网络IO
+
+方案：通过哈希，每个nginx缓存部分模板，引入模板和数据的治理问题？
+
+​	缓存重建的过程，会导致丢失一部分一致性
+
+
+
