--- a/网络基础/网络基础.md
+++ b/网络基础/网络基础.md
@@ -1,6 +1,6 @@
 # 网络基础
 
-
+> https://blog.csdn.net/biglow/article/details/106994256
 
 ## ISO 七层网络栈
 
@@ -149,7 +149,11 @@ Close():FIN_WAIT_1 --------FIN seq=x+n,ACK=y+n-1------------> CLOSE_WAIT
 
 ## TIME_WAIT
 
-根据TCP协议定义的3次握手断开连接规定,发起socket主动关闭的一方 socket将进入TIME_WAIT状态。TIME_WAIT状态将持续2个MSL(Max Segment Lifetime),在Windows下默认为4分钟，即240秒。TIME_WAIT状态下的socket不能被回收使用. 具体现象是对于一个处理大量短连接的服务器,如果是由服务器主动关闭客户端的连接，将导致服务器端存在大量的处于TIME_WAIT状态的socket， 甚至比处于Established状态下的socket多的多,严重影响服务器的处理能力，甚至耗尽可用的socket，停止服务。
+根据TCP协议定义的3次握手断开连接规定,发起socket主动关闭的一方 socket将进入TIME_WAIT状态。
+
+TIME_WAIT状态将持续2个MSL(Max Segment Lifetime),在Windows下默认为4分钟，即240秒。
+
+TIME_WAIT状态下的socket不能被回收使用. 具体现象是对于一个处理大量短连接的服务器,如果是由服务器主动关闭客户端的连接，将导致服务器端存在大量的处于TIME_WAIT状态的socket， 甚至比处于Established状态下的socket多的多,严重影响服务器的处理能力，甚至耗尽可用的socket，停止服务。
 
 
 
@@ -176,3 +180,16 @@ net.ipv4.tcp_fin_timeout，默认60s，减小fin_timeout，减少TIME_WAIT连接
 net.ipv4.tcp_tw_reuse = 1表示开启重用。允许将TIME-WAIT sockets重新用于新的TCP连接，默认为0，表示关闭；
 
 net.ipv4.tcp_tw_recycle = 1表示开启TCP连接中TIME-WAIT sockets的快速回收，默认为0，表示关闭。
+
+
+
+# 为什么是 三次握手不是二次或者四次握手
+
+>  https://www.zhihu.com/question/24853633
+
+1. 诉求本身在不可靠信道进行数据可靠传输的，最小协调次数的限制，
+2. 为了防止已失效的连接请求报文段突然又传送到了服务端，因而产生错误
+
+
+
+https://blog.csdn.net/tugangkai/article/details/82988454
